# aapt2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_windows.sh
.github/workflows/: build.yml
cmake/: aapt2.cmake  libandroidfw.cmake  libbase.cmake  libcutils.cmake  liblog.cmake  libpackagelistparser.cmake  libpng.cmake  libselinux.cmake  libutils.cmake
cmake/stubs/android/: configuration.h
patches/: aapt2.patch  androidfw.patch  core.patch  expat.patch  incremental_delivery.patch  protobuf.patch  selinux.patch  zopfli.patch
